--- a/automobile-usability.html
+++ b/automobile-usability.html
@@ -4,7 +4,7 @@
 <html data-wf-page="5f6b59431dde08da95a5a26c" data-wf-site="5f6b56e1763ff97ee6f130d9">
 <head>
   <meta charset="utf-8">
-  <title>Case Study</title>
+  <title>case study</title>
   <meta content="case study" property="og:title">
   <meta content="case study" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -20,30 +20,27 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div class="nav-bar" style="background-color: #FA4E2E;"><a href="index.html" class="w-inline-block"><img src="images/logo-1.png" loading="lazy" alt=""></a><a data-w-id="5b5faf5e-6f20-c943-a783-a960174af71e" href="#" class="hammenu w-inline-block"><img src="images/Group 5472.png" loading="lazy" alt=""></a></div>
+  <div class="nav-bar" style="background-color: #6DAFD8;"><a href="index.html" class="w-inline-block"><img src="images/logo-1.png" loading="lazy" alt=""></a><a data-w-id="5b5faf5e-6f20-c943-a783-a960174af71e" href="#" class="hammenu w-inline-block"><img src="images/Group 5472.png" loading="lazy" alt=""></a></div>
   <div class="custom-nav-menu">
     <div class="w-layout-grid navigation-menu-grid">
       <div class="costom-nav-container-1"><a href="index.html" class="text-navmenu-link-1">Home</a><a href="projects.html" class="text-navmenu-link-1">Works</a><a href="services.html" class="text-navmenu-link-1">Services</a></div>
       <div class="costom-nav-container-1"><a href="about-us.html" class="text-navmenu-link-1">About us</a><a href="blogs.html" class="text-navmenu-link-1">Blogs</a><a href="contact.html" class="text-navmenu-link-1">Contact</a></div>
-      <div class="costom-nav-container-1"><a href="services-user-experience.html" class="text-navmenu-link-2">User Experience</a><a href="services-interface-design.html" class="text-navmenu-link-2">Interface Design</a><a href="services-ui-development.html" aria-current="page" class="text-navmenu-link-2 w--current">UI Development</a><a href="services-endtoend-development.html" class="text-navmenu-link-2">End To End Development</a><a href="services-usabilitytesting.html" class="text-navmenu-link-2">Usability Testing</a></div>
+      <div class="costom-nav-container-1"><a href="ux-consulting.html" class="text-navmenu-link-2">User Experience</a><a href="visual-design.html" class="text-navmenu-link-2">Interface Design</a><a href="front-end-development.html" class="text-navmenu-link-2">UI Development</a><a href="back-end-development.html" class="text-navmenu-link-2">End To End Development</a><a href="usability-testing.html" class="text-navmenu-link-2">Usability Testing</a></div>
     </div>
-    <div class="w-layout-grid navigation-menu-grid-2"><a href="mailto:hello@uxmint.in" class="custom-nav-container-2 w-inline-block"><img src="images/email.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">hello@uxmint.in</div></a><a href="tel:+91 9884053886" class="custom-nav-container-2 w-inline-block"><img src="images/call-2.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">+919884053886</div></a><a href="tel:+91 919940410072" class="custom-nav-container-2 w-inline-block"><div class="text-navmenu-link">+919940410072</div></a><a href="https://medium.com/uxmint" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/icons8-medium-monogram.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a><a href="https://www.linkedin.com/company/uxmint-design" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/linked-in-square-button.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a></div><a data-w-id="8a4fddf2-7cc4-77c8-ac00-81affe90f4c3" href="#" class="navclose w-inline-block"><img src="images/close-1.svg" loading="lazy" width="20" alt=""></a>
+    <div class="w-layout-grid navigation-menu-grid-2"><a href="mailto:enquire@uxmint.in" class="custom-nav-container-2 w-inline-block"><img src="images/email.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">enquire@uxmint.in</div></a><a href="tel:+91 9884053886" class="custom-nav-container-2 w-inline-block"><img src="images/call-2.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">+919884053886</div></a><a href="tel:+91 919940410072" class="custom-nav-container-2 w-inline-block"><div class="text-navmenu-link">+919940410072</div></a><a href="https://medium.com/uxmint" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/icons8-medium-monogram.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a><a href="https://www.linkedin.com/company/uxmint-design" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/linked-in-square-button.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a></div><a data-w-id="8a4fddf2-7cc4-77c8-ac00-81affe90f4c3" href="#" class="navclose w-inline-block"><img src="images/close-1.svg" loading="lazy" width="20" alt=""></a>
   </div>
-  <div class="sectionhero-5">
-    <div class="wrapper1 hero2 w-container"><img src="images/child portal 1.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 973px) 80vw, (max-width: 991px) 779px, 100vw" alt=""></div>
+  <div class="sectionhero-7">
+    <div class="wrapper1 hero7 w-container"><img src="images/Automobile 1.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 973px) 80vw, (max-width: 991px) 779px, 100vw" alt=""></div>
   </div>
   <div class="section-12">
     <div class="case-study-wrapper w-container">
       <div class="div-block-77">
-        <div class="text-accent-2">Case study • Kids Infotainment</div>
-        <div class="text-h1-2">Child Care Portal</div>
+        <div class="text-accent-2">Case study • Automobile</div>
+        <div class="text-h1-2">Automobile Usability Testing</div>
       </div>
       <div class="div-block-78">
         <div class="text-aaaaaa">Service Catered</div>
-        <div class="text-block-14">UX Research</div>
-        <div class="text-block-14">Branding</div>
-        <div class="text-block-14">Design System</div>
-        <div class="text-block-14">Responsive Web Development</div>
+        <div class="text-block-14">Usability Testing</div>
       </div>
     </div>
   </div>
@@ -52,51 +49,49 @@
       <div class="team-content">
         <div class="w-layout-grid grid-team-2">
           <div id="w-node-031d7e894037-95a5a26c" class="text-h2-2 black">About Project</div>
-          <div class="text-h3-2 black">A worldwide NGO approached us for thier PoC on tablet based application for children in under-previlidged countries which will be used on shared tablets by multiple children.</div>
+          <div class="text-h3-2 black">A multi-national automobile manufacturing company wanted to test the Design viability of a new alert system for their luxury segment vehicles to be launched Asian Market.</div>
         </div>
       </div>
     </div>
   </div>
-  <div class="image-section"><img src="images/child portal 2.jpg" loading="lazy" sizes="100vw" alt="" class="image-11"></div>
+  <div class="image-section"><img src="images/Group 6426.png" loading="lazy" sizes="100vw" alt="" class="image-11"></div>
   <div class="section-14">
     <div class="container-10 w-container">
       <div class="div-block-79-child">
         <div class="text-aaaaaa">Approach</div>
-        <div class="text-h2-2 black">Kids should be encouraged and motivated through our designs which will help them to think and grow with joy in their early age</div>
+        <div class="text-h2-2 black">To observe the user Behaviour under different conditions with the parameters of Cognition, Acceptance and Reach. Also How Culture & Environment impacts the understanding of the functionalities?</div>
       </div>
     </div>
   </div>
   <div class="section-15">
     <div class="container-11 w-container">
       <div class="w-layout-grid grid-24">
-        <div><img src="images/child portal icon 1.svg" loading="lazy" alt="" class="image-7">
-          <div class="text-h3-3-child black">Target Audience</div>
-          <div class="text-h3-3 black">Kids of age 6 - 12</div>
-          <div class="text-h3-3 black">Coordinators who takes care of kids</div>
+        <div><img src="images/Group 6434.png" loading="lazy" alt="" class="image-7">
+          <div class="text-h3-3-child black">Testing Environment</div>
+          <div class="text-h3-3 black">Vehicle was tested in Natural Environment (to the extent possible) in calm road and broad daylight condition; while other pedestrians/vehicles were passing by the testing vehicle.</div>
         </div>
-        <div><img src="images/child portal icon 2.svg" loading="lazy" alt="" class="image-7">
-          <div class="text-h3-3-child black">Strategy</div>
-          <div class="text-h3-3 black">The platform should encourage students and motivate them in what they do and enable them to do things that makes them happy with the help of the technology.</div>
+        <div><img src="images/sustainable.png" loading="lazy" alt="" class="image-7">
+          <div class="text-h3-3-child black">Testing Equipments</div>
+          <div class="text-h3-3 black">Vehicle was provided with the prototype installed. Prototype was simulated for different scenarios with various alerts “Visual”, “Audio” and “Haptics”.</div>
         </div>
       </div>
     </div>
   </div>
   <div class="persona">
     <div class="container-12 w-container">
-      <div class="div-block-80-child">
+      <div class="div-block-80-automobile">
         <div class="div-block-82">
-          <div class="text-h2-2-child">The challenge</div>
+          <div class="text-h2-2-automobile">Testing Summary</div>
         </div>
-        <div class="text-h3-3">The challenge was to create a intuitive prototype which the kids can use to create new things and show their love for their donors.</div>
       </div>
-      <div class="div-block-81-child">
+      <div class="div-block-81-automobile">
         <div>
-          <div class="text-block-16-child">Solutions</div>
-          <div class="text-block-17">- Character specific interface themes.</div>
-          <div class="text-block-17">- Simple and Enjoyable interactive games for learning reducing difficulty</div>
-          <div class="text-block-17">- Functionalities that lets them show their love and engage with their sponsors in a much easy and fun way.</div>
-          <div class="text-block-17">- Age specific features to cater a larger crowd</div>
-          <div class="text-block-17">- Remote data loading to allow usage even in regions of no network connectivity</div>
+          <div class="text-block-17-automobile">The various touch points on user preferences, cultural impact, segment variance and the enhancements required were provided based on the exhaustive usability testing done on different user segments ranging from children, teenagers, adults, parents and elderly.</div>
+          <div class="text-block-17-automobile">Environmental</div>
+          <div class="text-block-17-automobile">Emotional</div>
+          <div class="text-block-17-automobile">Intellectual</div>
+          <div class="text-block-17-automobile">Ergonomical</div>
+          <div class="text-block-17-automobile">Senses</div>
         </div>
       </div>
     </div>
@@ -105,18 +100,18 @@
   <div class="section-projects">
     <div class="wrapper1 project-1 w-container">
       <div class="case-study-heading-2">
-        <div class="text-h2 black"> Other Case Studies</div><a href="projects.html" class="text-button-link-2 see-all">see all projects</a></div>
+        <div class="text-h2 black">Other Case Studies</div><a href="#" class="text-button-link-2 see-all">see all projects</a></div>
       <div class="w-layout-grid case-study-grid-2">
-        <div class="proj-1"><img src="images/Event hosting made stress less.png" loading="lazy" alt="" class="project-image">
-          <div class="text-h2-5">Event Hosting made stressless</div>
-          <a href="cs-event-managment.html" class="text-button-link-1 w-inline-block">
+        <div class="proj-1"><img src="images/Repository of accomplishment.png" loading="lazy" alt="" class="project-image">
+          <div class="text-h2-5">Repository of Accomplishments</div>
+          <a href="construction-portal.html" class="text-button-link-1 w-inline-block">
             <div class="button-link-icon"></div>
             <div>View Case Study</div>
           </a>
         </div>
-        <div class="proj-1 _2"><img src="images/Digital Transformation.png" loading="lazy" alt="" class="project-image">
-          <div class="text-h2-5">Digital Transformation for telcom</div>
-          <a href="cs-networking.html" class="text-button-link-1 w-inline-block">
+        <div class="proj-1 _2"><img src="images/Organic food.png" loading="lazy" alt="" class="project-image">
+          <div class="text-h2-5">To adapt organic food as a Lifestyle</div>
+          <a href="form-to-consumer.html" class="text-button-link-1 w-inline-block">
             <div class="button-link-icon"></div>
             <div>View Case Study</div>
           </a>
@@ -142,7 +137,7 @@
           </div>
         </div>
         <div class="footer-block-2">
-          <div class="w-layout-grid grid-10"><a href="services-user-experience.html" class="text-link-2-footer">User Experience</a><a href="services-interface-design.html" class="text-link-2-footer">Interface Design</a><a href="services-ui-development.html" class="text-link-2-footer">UI Development</a><a href="services-endtoend-development.html" class="text-link-2-footer">End To End Development</a><a href="services-usabilitytesting.html" class="text-link-2-footer">Usability Testing</a></div>
+          <div class="w-layout-grid grid-10"><a href="ux-consulting.html" class="text-link-2-footer">User Experience</a><a href="visual-design.html" class="text-link-2-footer">Interface Design</a><a href="front-end-development.html" class="text-link-2-footer">UI Development</a><a href="back-end-development.html" class="text-link-2-footer">End To End Development</a><a href="usability-testing.html" class="text-link-2-footer">Usability Testing</a></div>
         </div>
       </div>
       <div class="w-layout-grid terms-grid"><a class="text-link-3-footer">All rights reserved @ 2020</a><a class="text-link-3-footer">Made with love 
