--- a/construction-portal.html
+++ b/construction-portal.html
@@ -20,29 +20,30 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div class="nav-bar" style="background-color: #00B15B;"><a href="index.html" class="w-inline-block"><img src="images/logo-1.png" loading="lazy" alt=""></a><a data-w-id="5b5faf5e-6f20-c943-a783-a960174af71e" href="#" class="hammenu w-inline-block"><img src="images/Group 5472.png" loading="lazy" alt=""></a></div>
+  <div class="nav-bar" style="background-color: #DDFAFF;"><a href="index.html" class="w-inline-block"><img src="images/logo-2.png" loading="lazy" alt=""></a><a data-w-id="5b5faf5e-6f20-c943-a783-a960174af71e" href="#" class="hammenu w-inline-block"><img src="images/Group 5472_2.png" loading="lazy" alt=""></a></div>
   <div class="custom-nav-menu">
     <div class="w-layout-grid navigation-menu-grid">
       <div class="costom-nav-container-1"><a href="index.html" class="text-navmenu-link-1">Home</a><a href="projects.html" class="text-navmenu-link-1">Works</a><a href="services.html" class="text-navmenu-link-1">Services</a></div>
       <div class="costom-nav-container-1"><a href="about-us.html" class="text-navmenu-link-1">About us</a><a href="blogs.html" class="text-navmenu-link-1">Blogs</a><a href="contact.html" class="text-navmenu-link-1">Contact</a></div>
-      <div class="costom-nav-container-1"><a href="services-user-experience.html" class="text-navmenu-link-2">User Experience</a><a href="services-interface-design.html" class="text-navmenu-link-2">Interface Design</a><a href="services-ui-development.html" aria-current="page" class="text-navmenu-link-2 w--current">UI Development</a><a href="services-endtoend-development.html" class="text-navmenu-link-2">End To End Development</a><a href="services-usabilitytesting.html" class="text-navmenu-link-2">Usability Testing</a></div>
+      <div class="costom-nav-container-1"><a href="ux-consulting.html" class="text-navmenu-link-2">User Experience</a><a href="visual-design.html" class="text-navmenu-link-2">Interface Design</a><a href="front-end-development.html" class="text-navmenu-link-2">UI Development</a><a href="back-end-development.html" class="text-navmenu-link-2">End To End Development</a><a href="usability-testing.html" class="text-navmenu-link-2">Usability Testing</a></div>
     </div>
     <div class="w-layout-grid navigation-menu-grid-2"><a href="mailto:hello@uxmint.in" class="custom-nav-container-2 w-inline-block"><img src="images/email.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">hello@uxmint.in</div></a><a href="tel:+91 9884053886" class="custom-nav-container-2 w-inline-block"><img src="images/call-2.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">+919884053886</div></a><a href="tel:+91 919940410072" class="custom-nav-container-2 w-inline-block"><div class="text-navmenu-link">+919940410072</div></a><a href="https://medium.com/uxmint" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/icons8-medium-monogram.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a><a href="https://www.linkedin.com/company/uxmint-design" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/linked-in-square-button.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a></div><a data-w-id="8a4fddf2-7cc4-77c8-ac00-81affe90f4c3" href="#" class="navclose w-inline-block"><img src="images/close-1.svg" loading="lazy" width="20" alt=""></a>
   </div>
-  <div class="sectionhero-marketing">
-    <div class="wrapper1 marketing w-container"><img src="images/marketing 1.png" loading="lazy" srcset="images/marketing 1-p-500.png 500w, images/marketing 1.png 779w" sizes="(max-width: 479px) 100vw, (max-width: 973px) 80vw, (max-width: 991px) 779px, 100vw" alt=""></div>
+  <div class="sectionhero-6">
+    <div class="wrapper1 hero3 w-container-construction"><img src="images/Group 6668.png" loading="lazy"  sizes="(max-width: 479px) 100vw, (max-width: 973px) 80vw, (max-width: 991px) 779px, 100vw" alt=""></div>
   </div>
   <div class="section-12">
     <div class="case-study-wrapper w-container">
       <div class="div-block-77">
-        <div class="text-accent-2">Case study • Marketing</div>
-        <div class="text-h1-2">A Customer Advocacy<br>platform</div>
+        <div class="text-accent-2">Case study • Information Portal</div>
+        <div class="text-h1-2">Repository of Accomplishments</div>
       </div>
       <div class="div-block-78">
-        <div class="text-aaaaaa">Service Catered</div>
-        <div class="text-block-14">B2B2C</div>
-        <div class="text-block-14">Web Portal</div>
+        <div class="text-aaaaaa">Services Catered</div>
+        <div class="text-block-14">UX Research</div>
         <div class="text-block-14">Branding</div>
+        <div class="text-block-14">Design System</div>
+        <div class="text-block-14">Responsive Web Development</div>
       </div>
     </div>
   </div>
@@ -51,17 +52,17 @@
       <div class="team-content">
         <div class="w-layout-grid grid-team-2">
           <div id="w-node-031d7e894037-95a5a26c" class="text-h2-2 black">About Project</div>
-          <div class="text-h3-2 black">The platform allows to collect different source of reviews by business that enables a better reach through customer voice. All in one platform allows to keep track of different social media platform in the same place.</div>
+          <div class="text-h3-2 black">A Conglomerate with global operation approached us for an Engineering Portal that would serve as a Dashboard for showcasing all their previous Construction Portfolio. This would be predominantly used be the Engireening and Marketing team for sales pitches.</div>
         </div>
       </div>
     </div>
   </div>
-  <div class="image-section"><img src="images/marketing 2.png" loading="lazy" srcset="images/marketing 2-p-500.png 500w, images/marketing 2-p-800.png 800w, images/marketing 2-p-1080.png 1080w, images/marketing 2.png 1366w" sizes="100vw" alt="" class="image-11"></div>
+  <div class="image-section"><img src="images/Group 6520.png" loading="lazy" sizes="100vw" alt="" class="image-11"></div>
   <div class="section-14">
     <div class="container-10 w-container">
       <div class="div-block-79">
         <div class="text-aaaaaa">Approach</div>
-        <div class="text-h2-2 black">Our Primary objective is to resurrect idea of "Word of Mouth" to merge with Consumer Advocacy which enables endless possibilities</div>
+        <div class="text-h2-2 black">Our aim was to solve and eased the process of find-ability. And to create a multi leveled navigation system.</div>
       </div>
     </div>
   </div>
@@ -70,42 +71,32 @@
       <div class="w-layout-grid grid-24">
         <div><img src="images/Group-6398_1Group 6398.png" loading="lazy" alt="" class="image-7">
           <div class="text-h3-3 black">Target Audience</div>
-          <div class="text-h3-3 black">Start up business owners who are looking to expand their customer engagement. ustomer support team, Marketing heads of established businesses.</div>
+          <div class="text-h3-3 black">Engineers, Folks from sales department who want to showcase maintain the repository of accomplishments in a single place. </div>
         </div>
         <div><img src="images/Group-6399_1Group 6399.png" loading="lazy" alt="" class="image-7">
           <div class="text-h3-3 black">Strategy</div>
-          <div class="text-h3-3 black">Enabling Customer engagement, Marketing Campaigns, Surveys, Social proofing and Engagement, all in one place to track the customer advocacy over a period of time.</div>
+          <div class="text-h3-3 black">We devised a one-stop solution for the repeated tasks by analysing the various segments involved in the usage of proposed portal. Based on the inputs we found the predominant user group would be using the application in bigger screens like projectors and the portals interactions were designed to support the Sales team.</div>
         </div>
       </div>
     </div>
   </div>
   <div class="persona">
     <div class="container-12 w-container">
-      <div class="div-block-80" style="background-color: #00B15B;">
-        <div>
-          <div class="text-block-marketing16">Needs</div>
-          <div class="text-block-marketing">- Fast and Simple Design</div>
-          <div class="text-block-marketing">- Track Activity and Daily Tasks</div>
-          <div class="text-block-marketing">- Motivation & Appreciation</div>
-          <div class="text-block-marketing">- Reliable Platform</div>
-          <div class="text-block-marketing">- Interactive environment</div>
-          <div class="text-block-marketing">- Getting Testimonials</div>
-          <div class="text-block-marketing">- Social Status</div>
-          <div class="text-block-marketing16">Challenges</div>
-          <div class="text-block-marketing">- Getting Testimonials</div>
-          <div class="text-block-marketing">- Scattered Management</div>
-          <div class="text-block-marketing">- Manual Work</div>
-          <div class="text-block-marketing">- Losing Track of Customers</div>
-          <div class="text-block-marketing">- Feedback Mechanism</div>
+      <div class="div-block-80-construction">
+        <div class="div-block-82">
+          <div class="text-h2-2-construction">Focus areas</div>
         </div>
       </div>
-      <div class="div-block-81-marketing">
+      <div class="div-block-81-construction">
         <div>
-          <div class="text-block-marketing-16">Discovery & Analysis</div>
-          <div class="text-h3-3-marketing black">We started from "Zero". Knowing how word of mouth spreads was worth probing the chapters of history. Discoveries were quite interesting based on why people follow certain behaviours of promoting Product/services organically instead of doing it online.- Reliable Platform</div>
-          <div class="text-block-marketing">- Interactive environment</div>
-          <div class="text-block-marketing">- Getting Testimonials</div>
-          <div class="text-block-marketing">- Social Status</div>
+          <div class="text-block-16-sify">Needs</div>
+          <div class="text-block-17-sify">Due to the nature of the project it had volumes of numeric data which required representation in Graphical Interface to better comprehend the numeric data by comparison and trends.</div>
+          <div class="text-block-18-sify">Challenges</div>
+          <div class="text-block-17-sify">- Preparing proposal presentation for every pitch</div>
+          <div class="text-block-17-sify">- Searching previous project details from huge repository</div>
+          <div class="text-block-17-sify">- Multiple version of presentations</div>
+          <div class="text-block-17-sify">- Access to required data spontaneously</div>
+          <div class="text-block-17-sify">- Interpretation of humongous numeric data</div>
         </div>
       </div>
     </div>
@@ -113,39 +104,39 @@
   <div class="section-17">
     <div class="container-13 w-container">
       <div class="w-layout-grid grid-25">
-        <div id="w-node-05ce66aa0538-95a5a26c" class="text-block-19">Converting qualitative and quantitative data collected from research into design solutions</div>
-        <div id="w-node-05ce66aa053a-95a5a26c" class="text-h3-3 black">With the gathered data, We go ahead with the process of Information architecture, Task-flows, Wire frames, Feature mapping, prototyping to match our conceptual model to user's mental models.</div>
+        <div id="w-node-05ce66aa0538-95a5a26c" class="text-block-19">Converting qualitative and quantitative data collected from  research into design solutions</div>
+        <div id="w-node-05ce66aa053a-95a5a26c" class="text-h3-3 black">With the gathered data, We go ahead with the process of Information architecture, Task-flows, Wire frames, Feature mapping, prototyping to match our conceptual model to user’s mental models.</div>
       </div>
     </div>
   </div>
+  <div class="container-17-construction w-container">
+    <div class="div-block-87">
+      <div class="w-layout-grid grid-8-construction"><img src="images/Group 6669.png" loading="lazy" alt=""><img src="images/Group 6670.png" loading="lazy" alt=""><img src="images/Group 6671.png" loading="lazy" alt=""><img src="images/Group 6672.png" loading="lazy" alt=""><img src="images/Group 6673.png" loading="lazy" alt=""><img src="images/Group 6674.png" loading="lazy" alt=""><img src="images/Group 6675.png" loading="lazy" alt=""></div>
+    </div>
+  </div>
   <div class="wireframe">
-    <div class="container-marketing w-container"><img src="images/marketing 3.png" loading="lazy" srcset="images/marketing 3-p-500.png 500w, images/marketing 3-p-800.png 800w, images/marketing 3-p-1080.png 1080w, images/marketing 3.png 1260w" sizes="94vw" alt="" class="image-13"></div>
+    <div class="container-22-sify w-container"><img src="images/Group 6676.png" loading="lazy"  sizes="94vw" alt="" class="image-13"></div>
   </div>
-  <div class="visual-design">
-    <div class="container-23-marketing w-container"><img src="images/marketing 4.png" loading="lazy" srcset="images/marketing 4-p-500.png 500w, images/marketing 4-p-800.png 800w, images/marketing 4-p-1080.png 1080w, images/marketing 4.png 1367w" sizes="100vw" alt="" class="image-12"></div>
+  <div class="wireframe">
+    <div class="container-22-sify w-container"><img src="images/Group 6677.png" loading="lazy"  sizes="94vw" alt="" class="image-13"></div>
   </div>
-  <div class="visual-design">
-    <div class="container-marketing2 w-container"><img src="images/marketing 5.png" loading="lazy" srcset="images/marketing 5-p-500.png 500w, images/marketing 5-p-800.png 800w, images/marketing 5-p-1080.png 1080w, images/marketing 5.png 1367w" sizes="100vw" alt="" class="image-12"></div>
-  </div>
-  <div class="visual-design">
-    <div class="container-23 w-container"><img src="images/marketing 6.png" loading="lazy" srcset="images/marketing 6-p-500.png 500w, images/marketing 6-p-800.png 800w, images/marketing 6-p-1080.png 1080w, images/marketing 6.png 1367w" sizes="100vw" alt="" class="image-12"></div>
-  </div>
+  <div class="image-section"><img src="images/Group 6678.png" loading="lazy" sizes="100vw" alt="" class="image-11"></div>
   <div class="section-projects">
     <div class="wrapper1 project-1 w-container">
       <div class="case-study-heading-2">
         <div class="text-h2 black">Other Case Studies</div><a href="projects.html" class="text-button-link-2 see-all">see all projects</a></div>
       <div class="w-layout-grid case-study-grid-2">
-        <div class="proj-1"><img src="images/proj-1.png" loading="lazy" alt="" class="project-image">
-          <div class="text-h2-5-2">Event Hosting made stressless</div>
-          <a href="#" class="text-button-link-2 w-inline-block">
-            <div class="button-link-icon-2"></div>
+        <div class="proj-1"><img src="images/Website for start up.png" loading="lazy" alt="" class="project-image">
+          <div class="text-h2-5">Website for Startup</div>
+          <a href="#" class="text-button-link-1 w-inline-block">
+            <div class="button-link-icon"></div>
             <div>View Case Study</div>
           </a>
         </div>
-        <div class="proj-1 _2"><img src="images/proj-2.png" loading="lazy" alt="" class="project-image">
-          <div class="text-h2-5-2">Event Hosting made stressless</div>
-          <a href="#" class="text-button-link-2 w-inline-block">
-            <div class="button-link-icon-2"></div>
+        <div class="proj-1 _2"><img src="images/Automobile usability testing.png" loading="lazy" alt="" class="project-image">
+          <div class="text-h2-5">Automobile Usability Testing</div>
+          <a href="automobile-usability.html" class="text-button-link-1 w-inline-block">
+            <div class="button-link-icon"></div>
             <div>View Case Study</div>
           </a>
         </div>
@@ -170,7 +161,7 @@
           </div>
         </div>
         <div class="footer-block-2">
-          <div class="w-layout-grid grid-10"><a href="services-user-experience.html" class="text-link-2-footer">User Experience</a><a href="services-interface-design.html" class="text-link-2-footer">Interface Design</a><a href="services-ui-development.html" class="text-link-2-footer">UI Development</a><a href="services-endtoend-development.html" class="text-link-2-footer">End To End Development</a><a href="services-usabilitytesting.html" class="text-link-2-footer">Usability Testing</a></div>
+          <div class="w-layout-grid grid-10"><a href="ux-consulting.html" class="text-link-2-footer">User Experience</a><a href="visual-design.html" class="text-link-2-footer">Interface Design</a><a href="front-end-development.html" class="text-link-2-footer">UI Development</a><a href="back-end-development.html" class="text-link-2-footer">End To End Development</a><a href="usability-testing.html" class="text-link-2-footer">Usability Testing</a></div>
         </div>
       </div>
       <div class="w-layout-grid terms-grid"><a class="text-link-3-footer">All rights reserved @ 2020</a><a class="text-link-3-footer">Made with love 
