--- a/marketing.html
+++ b/marketing.html
@@ -20,30 +20,29 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div class="nav-bar" style="background-color: #AFE000;"><a href="index.html" class="w-inline-block"><img src="images/logo-2.png" loading="lazy" alt=""></a><a data-w-id="5b5faf5e-6f20-c943-a783-a960174af71e" href="#" class="hammenu w-inline-block"><img src="images/Group 5472_2.png" loading="lazy" alt=""></a></div>
+  <div class="nav-bar" style="background-color: #00B15B;"><a href="index.html" class="w-inline-block"><img src="images/logo-1.png" loading="lazy" alt=""></a><a data-w-id="5b5faf5e-6f20-c943-a783-a960174af71e" href="#" class="hammenu w-inline-block"><img src="images/Group 5472.png" loading="lazy" alt=""></a></div>
   <div class="custom-nav-menu">
     <div class="w-layout-grid navigation-menu-grid">
       <div class="costom-nav-container-1"><a href="index.html" class="text-navmenu-link-1">Home</a><a href="projects.html" class="text-navmenu-link-1">Works</a><a href="services.html" class="text-navmenu-link-1">Services</a></div>
       <div class="costom-nav-container-1"><a href="about-us.html" class="text-navmenu-link-1">About us</a><a href="blogs.html" class="text-navmenu-link-1">Blogs</a><a href="contact.html" class="text-navmenu-link-1">Contact</a></div>
-      <div class="costom-nav-container-1"><a href="services-user-experience.html" class="text-navmenu-link-2">User Experience</a><a href="services-interface-design.html" class="text-navmenu-link-2">Interface Design</a><a href="services-ui-development.html" aria-current="page" class="text-navmenu-link-2 w--current">UI Development</a><a href="services-endtoend-development.html" class="text-navmenu-link-2">End To End Development</a><a href="services-usabilitytesting.html" class="text-navmenu-link-2">Usability Testing</a></div>
+      <div class="costom-nav-container-1"><a href="ux-consulting.html" class="text-navmenu-link-2">User Experience</a><a href="visual-design.html" class="text-navmenu-link-2">Interface Design</a><a href="front-end-development.html" class="text-navmenu-link-2">UI Development</a><a href="back-end-development.html" class="text-navmenu-link-2">End To End Development</a><a href="usability-testing.html" class="text-navmenu-link-2">Usability Testing</a></div>
     </div>
     <div class="w-layout-grid navigation-menu-grid-2"><a href="mailto:hello@uxmint.in" class="custom-nav-container-2 w-inline-block"><img src="images/email.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">hello@uxmint.in</div></a><a href="tel:+91 9884053886" class="custom-nav-container-2 w-inline-block"><img src="images/call-2.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">+919884053886</div></a><a href="tel:+91 919940410072" class="custom-nav-container-2 w-inline-block"><div class="text-navmenu-link">+919940410072</div></a><a href="https://medium.com/uxmint" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/icons8-medium-monogram.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a><a href="https://www.linkedin.com/company/uxmint-design" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/linked-in-square-button.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a></div><a data-w-id="8a4fddf2-7cc4-77c8-ac00-81affe90f4c3" href="#" class="navclose w-inline-block"><img src="images/close-1.svg" loading="lazy" width="20" alt=""></a>
   </div>
-  <div class="sectionhero-4">
-    <div class="wrapper1 hero1 w-container"><img src="images/Sify banner image.png" loading="lazy"  sizes="(max-width: 479px) 100vw, (max-width: 973px) 80vw, (max-width: 991px) 779px, 100vw" alt=""></div>
+  <div class="sectionhero-marketing">
+    <div class="wrapper1 marketing w-container"><img src="images/marketing 1.png" loading="lazy" srcset="images/marketing 1-p-500.png 500w, images/marketing 1.png 779w" sizes="(max-width: 479px) 100vw, (max-width: 973px) 80vw, (max-width: 991px) 779px, 100vw" alt=""></div>
   </div>
   <div class="section-12">
     <div class="case-study-wrapper w-container">
       <div class="div-block-77">
-        <div class="text-accent-2">Case study • Digital Transformation</div>
-        <div class="text-h1-2">Digital Transformation for telcom</div>
+        <div class="text-accent-2">Case study • Marketing</div>
+        <div class="text-h1-2">A Customer Advocacy<br>platform</div>
       </div>
       <div class="div-block-78">
-        <div class="text-aaaaaa">Services Catered</div>
-        <div class="text-block-14">UX Research</div>
+        <div class="text-aaaaaa">Service Catered</div>
+        <div class="text-block-14">B2B2C</div>
+        <div class="text-block-14">Web Portal</div>
         <div class="text-block-14">Branding</div>
-        <div class="text-block-14">Design System</div>
-        <div class="text-block-14">Responsive Web Development</div>
       </div>
     </div>
   </div>
@@ -52,17 +51,17 @@
       <div class="team-content">
         <div class="w-layout-grid grid-team-2">
           <div id="w-node-031d7e894037-95a5a26c" class="text-h2-2 black">About Project</div>
-          <div class="text-h3-2 black">We were approached with redesign of their legacy system that required change in process from the ground-up. The portal was intertwined with multiple other platforms that was feeding inputs to the UI. It was a challenge to break down the functionalities into atomic structures to ensure ease of use and reusability for the UI Development.</div>
+          <div class="text-h3-2 black">The platform allows to collect different source of reviews by business that enables a better reach through customer voice. All in one platform allows to keep track of different social media platform in the same place.</div>
         </div>
       </div>
     </div>
   </div>
-  <div class="image-section"><img src="images/Group 6511.png" loading="lazy" sizes="100vw" alt="" class="image-11"></div>
+  <div class="image-section"><img src="images/marketing 2.png" loading="lazy" srcset="images/marketing 2-p-500.png 500w, images/marketing 2-p-800.png 800w, images/marketing 2-p-1080.png 1080w, images/marketing 2.png 1366w" sizes="100vw" alt="" class="image-11"></div>
   <div class="section-14">
     <div class="container-10 w-container">
       <div class="div-block-79">
         <div class="text-aaaaaa">Approach</div>
-        <div class="text-h2-2 black">Our aim was to create an Easily adaptable portal, with instant access to Products & Services; with least to none redundant tasks</div>
+        <div class="text-h2-2 black">Our Primary objective is to resurrect idea of "Word of Mouth" to merge with Consumer Advocacy which enables endless possibilities</div>
       </div>
     </div>
   </div>
@@ -71,38 +70,42 @@
       <div class="w-layout-grid grid-24">
         <div><img src="images/Group-6398_1Group 6398.png" loading="lazy" alt="" class="image-7">
           <div class="text-h3-3 black">Target Audience</div>
-          <div class="text-h3-3 black">The Owner or the Decision maker, Tech Savvy person or domain expert,  The operations or the person responsible for purchases.</div>
+          <div class="text-h3-3 black">Start up business owners who are looking to expand their customer engagement. ustomer support team, Marketing heads of established businesses.</div>
         </div>
         <div><img src="images/Group-6399_1Group 6399.png" loading="lazy" alt="" class="image-7">
           <div class="text-h3-3 black">Strategy</div>
-          <div class="text-h3-3 black">Empowering the user to take control of the wheel. Chi would enable Up selling and Cross selling other services & products of the company.</div>
+          <div class="text-h3-3 black">Enabling Customer engagement, Marketing Campaigns, Surveys, Social proofing and Engagement, all in one place to track the customer advocacy over a period of time.</div>
         </div>
       </div>
     </div>
   </div>
   <div class="persona">
     <div class="container-12 w-container">
-      <div class="div-block-80-sify">
-        <div class="div-block-82">
-          <div class="text-h2-2-sify">Users Interviews</div>
-        </div>
-        <div class="text-h3-3-sify">23 User Interviews</div>
-        <div class="text-h3-3-sify">03 User Groups</div>
-      </div>
-      <div class="div-block-81-sify">
+      <div class="div-block-80" style="background-color: #00B15B;">
         <div>
-          <div class="text-block-16-sify">Needs</div>
-          <div class="text-block-17-sify">- Promoting online and on-time payment of invoices</div>
-          <div class="text-block-17-sify">- Converting existing offline users to online process</div>
-          <div class="text-block-17-sify">- Reducing the manual intervention</div>
-          <div class="text-block-17-sify">- Avoiding delays in status intimation</div>
-          <div class="text-block-17-sify">- Improving customer retention</div>
-          <div class="text-block-18-sify">Challenges</div>
-          <div class="text-block-17-sify">- Heavy dependency on Support Team</div>
-          <div class="text-block-17-sify">- Delay in communication</div>
-          <div class="text-block-17-sify">- Outstanding customer payments</div>
-          <div class="text-block-17-sify">- Avoiding cheque payments</div>
-          <div class="text-block-17-sify">- Multiple follow-ups to customers on purchase and billing</div>
+          <div class="text-block-marketing16">Needs</div>
+          <div class="text-block-marketing">- Fast and Simple Design</div>
+          <div class="text-block-marketing">- Track Activity and Daily Tasks</div>
+          <div class="text-block-marketing">- Motivation & Appreciation</div>
+          <div class="text-block-marketing">- Reliable Platform</div>
+          <div class="text-block-marketing">- Interactive environment</div>
+          <div class="text-block-marketing">- Getting Testimonials</div>
+          <div class="text-block-marketing">- Social Status</div>
+          <div class="text-block-marketing16">Challenges</div>
+          <div class="text-block-marketing">- Getting Testimonials</div>
+          <div class="text-block-marketing">- Scattered Management</div>
+          <div class="text-block-marketing">- Manual Work</div>
+          <div class="text-block-marketing">- Losing Track of Customers</div>
+          <div class="text-block-marketing">- Feedback Mechanism</div>
+        </div>
+      </div>
+      <div class="div-block-81-marketing">
+        <div>
+          <div class="text-block-marketing-16">Discovery & Analysis</div>
+          <div class="text-h3-3-marketing black">We started from "Zero". Knowing how word of mouth spreads was worth probing the chapters of history. Discoveries were quite interesting based on why people follow certain behaviours of promoting Product/services organically instead of doing it online.- Reliable Platform</div>
+          <div class="text-block-marketing">- Interactive environment</div>
+          <div class="text-block-marketing">- Getting Testimonials</div>
+          <div class="text-block-marketing">- Social Status</div>
         </div>
       </div>
     </div>
@@ -110,73 +113,39 @@
   <div class="section-17">
     <div class="container-13 w-container">
       <div class="w-layout-grid grid-25">
-        <div id="w-node-05ce66aa0538-95a5a26c" class="text-block-19">Converting qualitative and quantitative data collected from  research into design solutions</div>
-        <div id="w-node-05ce66aa053a-95a5a26c" class="text-h3-3 black">With the gathered data, We go ahead with the process of Information architecture, Task-flows, Wire frames, Feature mapping, prototyping to match our conceptual model to user’s mental models.</div>
+        <div id="w-node-05ce66aa0538-95a5a26c" class="text-block-19">Converting qualitative and quantitative data collected from research into design solutions</div>
+        <div id="w-node-05ce66aa053a-95a5a26c" class="text-h3-3 black">With the gathered data, We go ahead with the process of Information architecture, Task-flows, Wire frames, Feature mapping, prototyping to match our conceptual model to user's mental models.</div>
       </div>
     </div>
   </div>
   <div class="wireframe">
-    <div class="container-22-sify w-container"><img src="images/Group 6609.png" loading="lazy"  sizes="94vw" alt="" class="image-13"></div>
+    <div class="container-marketing w-container"><img src="images/marketing 3.png" loading="lazy" srcset="images/marketing 3-p-500.png 500w, images/marketing 3-p-800.png 800w, images/marketing 3-p-1080.png 1080w, images/marketing 3.png 1260w" sizes="94vw" alt="" class="image-13"></div>
   </div>
   <div class="visual-design">
-    <div class="container-14-sify w-container">
-      <div class="div-block-83">
-        <div class="text-h3-2 black-sify">We went ahead with mobile first design with wireframe and as with UI Design</div>
-      </div>
-    </div>
-    <div class="container-23 w-container"><img src="images/Sify Colours.png" loading="lazy" sizes="100vw" alt="" class="image-13-sify"></div>
+    <div class="container-23-marketing w-container"><img src="images/marketing 4.png" loading="lazy" srcset="images/marketing 4-p-500.png 500w, images/marketing 4-p-800.png 800w, images/marketing 4-p-1080.png 1080w, images/marketing 4.png 1367w" sizes="100vw" alt="" class="image-12"></div>
   </div>
-  <div class="image-section"><img src="images/Group 6610.png" loading="lazy" sizes="100vw" alt="" class="image-11-sify"></div>
-  <div class="section-17">
-    <div class="container-13 w-container">
-      <div class="w-layout-grid grid-25">
-        <div id="w-node-05ce66aa0538-95a5a26c" class="text-block-19">Creating a Design System</div>
-        <div id="w-node-05ce66aa053a-95a5a26c" class="text-h3-3 black">Making a design system to adapt to different devices, scalable services, Upcoming products and consistency throughout the visual language.</div>
-      </div>
-    </div>
+  <div class="visual-design">
+    <div class="container-marketing2 w-container"><img src="images/marketing 5.png" loading="lazy" srcset="images/marketing 5-p-500.png 500w, images/marketing 5-p-800.png 800w, images/marketing 5-p-1080.png 1080w, images/marketing 5.png 1367w" sizes="100vw" alt="" class="image-12"></div>
   </div>
-  <div class="section-18">
-    <div class="container-24 w-container"></div>
+  <div class="visual-design">
+    <div class="container-23 w-container"><img src="images/marketing 6.png" loading="lazy" srcset="images/marketing 6-p-500.png 500w, images/marketing 6-p-800.png 800w, images/marketing 6-p-1080.png 1080w, images/marketing 6.png 1367w" sizes="100vw" alt="" class="image-12"></div>
   </div>
-  <div class="section-19">
-    <div class="container-25 w-container"></div>
-    <div class="container-26 w-container"></div>
-    <div class="container-27 w-container"></div>
-  </div>
-  <div class="section-17">
-    <div class="container-13 w-container">
-      <div class="w-layout-grid grid-25">
-        <div id="w-node-05ce66aa0538-95a5a26c" class="text-h3-3 black">A Design system that would cater to both pre and post login scenarios, Mobile and laptop devices, established and upcoming services/products.</div>
-      </div>
-    </div>
-  </div>
-  </div>
-  <div class="section-20">
-    <div class="container-28 w-container"></div>
-  </div>
-  <div class="section-21">
-    <div class="container-29 w-container"></div>
-    <div class="container-30 w-container"></div>
-    <div class="container-31 w-container"></div>
-    <div class="container-32 w-container"></div>
-  </div>
-  <div class="image-section"><img src="images/Sify Deskyop design.png" loading="lazy" sizes="100vw" alt="" class="image-11"></div>
   <div class="section-projects">
     <div class="wrapper1 project-1 w-container">
       <div class="case-study-heading-2">
         <div class="text-h2 black">Other Case Studies</div><a href="projects.html" class="text-button-link-2 see-all">see all projects</a></div>
       <div class="w-layout-grid case-study-grid-2">
-        <div class="proj-1"><img src="images/Creative upskill.png" loading="lazy" alt="" class="project-image">
-          <div class="text-h2-5">A designers platform for creative upskill</div>
-          <a href="cs-skill-development.html" class="text-button-link-1 w-inline-block">
-            <div class="button-link-icon"></div>
+        <div class="proj-1"><img src="images/proj-1.png" loading="lazy" alt="" class="project-image">
+          <div class="text-h2-5-2">Event Hosting made stressless</div>
+          <a href="#" class="text-button-link-2 w-inline-block">
+            <div class="button-link-icon-2"></div>
             <div>View Case Study</div>
           </a>
         </div>
-        <div class="proj-1 _2"><img src="images/Childcare.png" loading="lazy" alt="" class="project-image">
-          <div class="text-h2-5">Child Care Portal</div>
-          <a href="cs-child-care-portal.html" class="text-button-link-1 w-inline-block">
-            <div class="button-link-icon"></div>
+        <div class="proj-1 _2"><img src="images/proj-2.png" loading="lazy" alt="" class="project-image">
+          <div class="text-h2-5-2">Event Hosting made stressless</div>
+          <a href="#" class="text-button-link-2 w-inline-block">
+            <div class="button-link-icon-2"></div>
             <div>View Case Study</div>
           </a>
         </div>
@@ -201,7 +170,7 @@
           </div>
         </div>
         <div class="footer-block-2">
-          <div class="w-layout-grid grid-10"><a href="services-user-experience.html" class="text-link-2-footer">User Experience</a><a href="services-interface-design.html" class="text-link-2-footer">Interface Design</a><a href="services-ui-development.html" class="text-link-2-footer">UI Development</a><a href="services-endtoend-development.html" class="text-link-2-footer">End To End Development</a><a href="services-usabilitytesting.html" class="text-link-2-footer">Usability Testing</a></div>
+          <div class="w-layout-grid grid-10"><a href="ux-consulting.html" class="text-link-2-footer">User Experience</a><a href="visual-design.html" class="text-link-2-footer">Interface Design</a><a href="front-end-development.html" class="text-link-2-footer">UI Development</a><a href="back-end-development.html" class="text-link-2-footer">End To End Development</a><a href="usability-testing.html" class="text-link-2-footer">Usability Testing</a></div>
         </div>
       </div>
       <div class="w-layout-grid terms-grid"><a class="text-link-3-footer">All rights reserved @ 2020</a><a class="text-link-3-footer">Made with love 
