--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
     <div class="w-layout-grid navigation-menu-grid">
       <div class="costom-nav-container-1"><a href="index.html" class="text-navmenu-link-1">Home</a><a href="projects.html" class="text-navmenu-link-1">Works</a><a href="services.html" aria-current="page" class="text-navmenu-link-1 w--current">Services</a></div>
       <div class="costom-nav-container-1"><a href="about-us.html" class="text-navmenu-link-1">About us</a><a href="blogs.html" class="text-navmenu-link-1">Blogs</a><a href="contact.html" class="text-navmenu-link-1">Contact</a></div>
-      <div class="costom-nav-container-1"><a href="services-user-experience.html" class="text-navmenu-link-2">User Experience</a><a href="services-interface-design.html" class="text-navmenu-link-2">Interface Design</a><a href="services-ui-development.html" class="text-navmenu-link-2">UI Development</a><a href="services-endtoend-development.html" class="text-navmenu-link-2">End To End Development</a><a href="services-usabilitytesting.html" class="text-navmenu-link-2">Usability Testing</a></div>
+      <div class="costom-nav-container-1"><a href="ux-consulting.html" class="text-navmenu-link-2">User Experience</a><a href="visual-design.html" class="text-navmenu-link-2">Interface Design</a><a href="front-end-development.html" class="text-navmenu-link-2">UI Development</a><a href="back-end-development.html" class="text-navmenu-link-2">End To End Development</a><a href="usability-testing.html" class="text-navmenu-link-2">Usability Testing</a></div>
     </div>
     <div class="w-layout-grid navigation-menu-grid-2"><a href="mailto:hello@uxmint.in" class="custom-nav-container-2 w-inline-block"><img src="images/email.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">hello@uxmint.in</div></a><a href="tel:+91 9884053886" class="custom-nav-container-2 w-inline-block"><img src="images/call-2.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">+919884053886</div></a><a href="tel:+91 919940410072" class="custom-nav-container-2 w-inline-block"><div class="text-navmenu-link">+919940410072</div></a><a href="https://medium.com/uxmint" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/icons8-medium-monogram.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a><a href="https://www.linkedin.com/company/uxmint-design" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/linked-in-square-button.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a></div><a data-w-id="8a4fddf2-7cc4-77c8-ac00-81affe90f4c3" href="#" class="navclose w-inline-block"><img src="images/close-1.svg" loading="lazy" width="20" alt=""></a></div>
   <div class="sectionhero">
@@ -58,7 +58,7 @@
               </div>
               <div class="child-1">
                 <div class="text-h4---22px">Unravelling solutions for business problems in alignment with end-user expectations. Creating functional, Usable, Pleasurable Unique and Value for digital products</div>
-                <a href="services-user-experience.html" class="text-button-link-1 w-inline-block">
+                <a href="ux-consulting.html" class="text-button-link-1 w-inline-block">
                   <div class="button-link-icon"></div>
                   <div>See more</div>
                 </a>
@@ -78,7 +78,7 @@
               </div>
               <div class="child-1">
                 <div class="text-h4---22px">Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</div>
-                <a href="services-interface-design.html" class="text-button-link-1 w-inline-block">
+                <a href="visual-design.html" class="text-button-link-1 w-inline-block">
                   <div class="button-link-icon"></div>
                   <div>See more</div>
                 </a>
@@ -98,7 +98,7 @@
               </div>
               <div class="child-1">
                 <div class="text-h4---22px">The design comes to life when the robust technologies are put in place to experience the best.</div>
-                <a href="services-ui-development.html" class="text-button-link-1 w-inline-block">
+                <a href="front-end-development.html" class="text-button-link-1 w-inline-block">
                   <div class="button-link-icon"></div>
                   <div>See more</div>
                 </a>
@@ -118,7 +118,7 @@
               </div>
               <div class="child-1">
                 <div class="text-h4---22px">Designing scalable platform harnessing the technology for business reach to their end users with the better user experience, engagement and adaptablity.</div>
-                <a href="services-endtoend-development.html" class="text-button-link-1 w-inline-block">
+                <a href="back-end-development.html" class="text-button-link-1 w-inline-block">
                   <div class="button-link-icon"></div>
                   <div>See more</div>
                 </a>
@@ -138,7 +138,7 @@
               </div>
               <div class="child-1">
                 <div class="text-h4---22px">Best of the designs, is the design that evolves and adapts as per user’s mental model. It helps the business to evaluates the product or website before it is launched.</div>
-                <a href="services-usabilitytesting.html" class="text-button-link-1 w-inline-block">
+                <a href="usability-testing.html" class="text-button-link-1 w-inline-block">
                   <div class="button-link-icon"></div>
                   <div>See more</div>
                 </a>
@@ -204,14 +204,14 @@
           </div>
         </div>
         <div class="footer-block-2">
-          <div class="w-layout-grid grid-10"><a href="services-user-experience.html" class="text-link-2-footer">User Experience</a><a href="services-interface-design.html" class="text-link-2-footer">Interface Design</a><a href="services-ui-development.html" class="text-link-2-footer">UI Development</a><a href="services-endtoend-development.html" class="text-link-2-footer">End To End Development</a><a href="services-usabilitytesting.html" class="text-link-2-footer">Usability Testing</a></div>
+          <div class="w-layout-grid grid-10"><a href="ux-consulting.html" class="text-link-2-footer">User Experience</a><a href="visual-design.html" class="text-link-2-footer">Interface Design</a><a href="front-end-development.html" class="text-link-2-footer">UI Development</a><a href="back-end-development.html" class="text-link-2-footer">End To End Development</a><a href="usability-testing.html" class="text-link-2-footer">Usability Testing</a></div>
         </div>
       </div>
       <div class="w-layout-grid terms-grid"><a class="text-link-3-footer">All rights reserved @ 2020</a><a class="text-link-3-footer">Made with love 
       <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
       </svg> 
-      uxmint</a><a href="privacy-policy.html" class="text-link-3-footer">Privacy policy</a><div class="footer-divider-2"></div><a href="terms-&-conditions.html" class="text-link-3-footer">Terms & Conditions</a></div>
+      uxmint</a><a href="privacy-polocy.html" class="text-link-3-footer">Privacy policy</a><div class="footer-divider-2"></div><a href="terms-&-conditions.html" class="text-link-3-footer">Terms & Conditions</a></div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f4886dc233ee29739aa35c1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
