--- a/skill-development.html
+++ b/skill-development.html
@@ -20,28 +20,29 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div class="nav-bar" style="background-color: #43BA55;"><a href="index.html" class="w-inline-block"><img src="images/logo-1.png" loading="lazy" alt=""></a><a data-w-id="5b5faf5e-6f20-c943-a783-a960174af71e" href="#" class="hammenu w-inline-block"><img src="images/Group 5472.png" loading="lazy" alt=""></a></div>
+  <div class="nav-bar" style="background-color: #742EB1;"><a href="index.html" class="w-inline-block"><img src="images/logo-1.png" loading="lazy" alt=""></a><a data-w-id="5b5faf5e-6f20-c943-a783-a960174af71e" href="#" class="hammenu w-inline-block"><img src="images/Group 5472.png" loading="lazy" alt=""></a></div>
   <div class="custom-nav-menu">
     <div class="w-layout-grid navigation-menu-grid">
       <div class="costom-nav-container-1"><a href="index.html" class="text-navmenu-link-1">Home</a><a href="projects.html" class="text-navmenu-link-1">Works</a><a href="services.html" class="text-navmenu-link-1">Services</a></div>
       <div class="costom-nav-container-1"><a href="about-us.html" class="text-navmenu-link-1">About us</a><a href="blogs.html" class="text-navmenu-link-1">Blogs</a><a href="contact.html" class="text-navmenu-link-1">Contact</a></div>
-      <div class="costom-nav-container-1"><a href="services-user-experience.html" class="text-navmenu-link-2">User Experience</a><a href="services-interface-design.html" class="text-navmenu-link-2">Interface Design</a><a href="services-ui-development.html" aria-current="page" class="text-navmenu-link-2 w--current">UI Development</a><a href="services-endtoend-development.html" class="text-navmenu-link-2">End To End Development</a><a href="services-usabilitytesting.html" class="text-navmenu-link-2">Usability Testing</a></div>
+      <div class="costom-nav-container-1"><a href="ux-consulting.html" class="text-navmenu-link-2">User Experience</a><a href="visual-design.html" class="text-navmenu-link-2">Interface Design</a><a href="front-end-development.html" class="text-navmenu-link-2">UI Development</a><a href="back-end-development.html" class="text-navmenu-link-2">End To End Development</a><a href="usability-testing.html" class="text-navmenu-link-2">Usability Testing</a></div>
     </div>
     <div class="w-layout-grid navigation-menu-grid-2"><a href="mailto:hello@uxmint.in" class="custom-nav-container-2 w-inline-block"><img src="images/email.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">hello@uxmint.in</div></a><a href="tel:+91 9884053886" class="custom-nav-container-2 w-inline-block"><img src="images/call-2.svg" loading="lazy" width="20" alt="" class="icons-contact"><div class="text-navmenu-link">+919884053886</div></a><a href="tel:+91 919940410072" class="custom-nav-container-2 w-inline-block"><div class="text-navmenu-link">+919940410072</div></a><a href="https://medium.com/uxmint" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/icons8-medium-monogram.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a><a href="https://www.linkedin.com/company/uxmint-design" target="_blank" class="custom-nav-container-2 w-inline-block"><img src="images/linked-in-square-button.svg" loading="lazy" width="25" alt="" class="social-icons-1"></a></div><a data-w-id="8a4fddf2-7cc4-77c8-ac00-81affe90f4c3" href="#" class="navclose w-inline-block"><img src="images/close-1.svg" loading="lazy" width="20" alt=""></a>
   </div>
-  <div class="sectionhero-csa">
-    <div class="wrapper1 csa w-container"><img src="images/csa 1.jpg" loading="lazy" srcset="images/csa 1-p-500.jpg 500w, images/csa 1.jpg 779w" sizes="(max-width: 479px) 100vw, (max-width: 973px) 80vw, (max-width: 991px) 779px, 100vw" alt=""></div>
+  <div class="sectionhero-metamorp">
+    <div class="wrapper1 metamorp w-container"><img src="images/metamorp 1.jpg" loading="lazy" srcset="images/metamorp 1-p-500.jpg 500w, images/metamorp 1.jpg 779w" sizes="(max-width: 479px) 100vw, (max-width: 973px) 80vw, (max-width: 991px) 779px, 100vw" alt=""></div>
   </div>
   <div class="section-12">
     <div class="case-study-wrapper w-container">
       <div class="div-block-77">
-        <div class="text-accent-2">Case study • Farm To Consumer</div>
-        <div class="text-h1-2">To adapt organic food as a Lifestyle</div>
+        <div class="text-accent-2">Case study • Skill Development</div>
+        <div class="text-h1-2">A designers platform for creative upskill</div>
       </div>
       <div class="div-block-78">
         <div class="text-aaaaaa">Service Catered</div>
         <div class="text-block-14">Mobile App</div>
         <div class="text-block-14">UX and UI</div>
+        <div class="text-block-14">Branding</div>
       </div>
     </div>
   </div>
@@ -50,58 +51,60 @@
       <div class="team-content">
         <div class="w-layout-grid grid-team-2">
           <div id="w-node-031d7e894037-95a5a26c" class="text-h2-2 black">About Project</div>
-          <div class="text-h3-2 black">With a shift towards organic food consumption by people, and increased middlemen commissions the life of a normal farmer becomes worse day by day.<br>This platform helps the local farming communities to produce food that the customer wants and deliver them directly avoiding the middlemen thus creating a sustainable and happy farming community.</div>
+          <div class="text-h3-2 black">Platform for designers, design aspirants/students and mentor to collaborate and share their ideology, design methods, process and uplift their skills in the Design domain.</div>
         </div>
       </div>
     </div>
   </div>
-  <div class="image-section"><img src="images/csa 2.jpg" loading="lazy" srcset="images/csa 2-p-500.jpg 500w, images/csa 2-p-800.jpg 800w, images/csa 2-p-1080.jpg 1080w, images/csa 2.jpg 1366w" sizes="100vw" alt="" class="image-11"></div>
+  <div class="image-section"><img src="images/metamorp 2.jpg" loading="lazy" srcset="images/metamorp 2-p-500.jpg 500w, images/metamorp 2-p-800.jpg 800w, images/metamorp 2-p-1080.jpg 1080w, images/metamorp 2.jpg 1366w" sizes="100vw" alt="" class="image-11"></div>
   <div class="section-14">
     <div class="container-10 w-container">
       <div class="div-block-79">
         <div class="text-aaaaaa">Approach</div>
-        <div class="text-h2-2 black">The idea was no to just help consumers buy organic food from the farmer but to build a platform where homemakers can share their culinary skills and learn from others</div>
+        <div class="text-h2-2 black">The way designers need to be evaluated is by looking at their skills and not their years of experience, this is the base idea that this platform was designed upon</div>
       </div>
     </div>
   </div>
   <div class="section-15">
     <div class="container-11 w-container">
       <div class="w-layout-grid grid-24">
-        <div><img src="images/Group-6398_1Group 6398.png" loading="lazy" alt="" class="image-7">
+        <div><img src="images/target-audience.png" loading="lazy" alt="" class="image-7">
           <div class="text-h3-3 black">Target Audience</div>
-          <div class="text-h3-3 black">Local farming community which are close by the city<br>Organic food consumers<br>Inorganic food consumers</div>
+          <div class="text-h3-3 black">Aspiring designers<br>Freshers in Design<br>Experienced Designers<br>Mentors in Design</div>
         </div>
-        <div><img src="images/Group-6399_1Group 6399.png" loading="lazy" alt="" class="image-7">
+        <div><img src="images/strategy.png" loading="lazy" alt="" class="image-7">
           <div class="text-h3-3 black">Strategy</div>
-          <div class="text-h3-3 black">Help users to plan their cooking menu and help them buy the right vegetables and groceries that they need for their entire week or month.<br>Also to share their recipies with the community and learn from fellow homemakers.</div>
+          <div class="text-h3-3 black">The entire platform and its features were based on the one base idea. The strategy is to encourage designers to showcase the different skills related to design and learn from the community and grow together.</div>
         </div>
       </div>
     </div>
   </div>
   <div class="persona">
     <div class="container-12 w-container">
-      <div class="div-block-80">
+      <div class="div-block-80" style="background-color: #742EB1;">
         <div class="div-block-82">
-          <div class="text-h2-2">20 +Users Interviewed</div>
+          <div class="text-h2-2">50 +Users Interviewed</div>
         </div>
-        <div class="text-h3-3">Organic food consumers</div>
-        <div class="text-h3-3">Inorganic food consumer</div>
-        <div class="text-h3-3">Homemakers</div>
-        <div class="text-h3-3">Environment friendly people</div>
+        <div class="text-h3-3">Career Shifters</div>
+        <div class="text-h3-3">Knowledge Seekers</div>
+        <div class="text-h3-3">Job Hunters</div>
+        <div class="text-h3-3">Experienced Designers</div>
+        <div class="text-h3-3">Recruiters</div>
+        <div class="text-h3-3">Design Mentors</div>
       </div>
       <div class="div-block-81">
         <div>
           <div class="text-block-16">Needs</div>
-          <div class="text-block-17">- Weekly pre-planned vegetable + groceries list for the whole famil</div>
-          <div class="text-block-17">- A place to buy goods in fast and easy way</div>
-          <div class="text-block-17">- A Food Chart to avoid "daily new recipe" confusion</div>
-          <div class="text-block-17">- Health benefits of the Goods and Recipes</div>
-          <div class="text-block-17">- Recipe suggestions based on Taste, Quality, Time, Health</div>
+          <div class="text-block-17">- Awareness among younger generation on Creative Job</div>
+          <div class="text-block-17">- Understand how the field works</div>
+          <div class="text-block-17">- Need a mentor to Guide</div>
+          <div class="text-block-17">- Portfolio review by experts</div>
+          <div class="text-block-17">- Know current trends and new methods to debate with Industry vetrans</div>
           <div class="text-block-18">Challenges</div>
-          <div class="text-block-17">- Planning what vegetables to buy for the week</div>
-          <div class="text-block-17">- Identifying the right authentic shops that sells quality products</div>
-          <div class="text-block-17">- Don’t have knowledge about how much quantity to buy for family</div>
-          <div class="text-block-17">- Finds it difficult to do all the purchases all alone</div>
+          <div class="text-block-17">- Finding the right people to learn from</div>
+          <div class="text-block-17">- If the portfolio that they do is up to industry standards</div>
+          <div class="text-block-17">- To know people who are in the industries that one is interested in</div>
+          <div class="text-block-17">- To know what kind of work does a designer do in different offices</div>
           <div class="text-block-17">- Difficult to find and cook new and tasty dishes every now and then</div>
         </div>
       </div>
@@ -110,57 +113,51 @@
   <div class="section-17">
     <div class="container-13 w-container">
       <div class="w-layout-grid grid-25">
-        <div id="w-node-05ce66aa0538-95a5a26c" class="text-block-19">Understanding user behaviour through qualitative research helped in designing interesting solutions for users</div>
-        <div id="w-node-05ce66aa053a-95a5a26c" class="text-h3-3 black">Diving deep into the user journey unravelled their pain points their emotions and challenges that the under go.<br>This was handy in the further stages of design which included wire framing the concepts and building a prototypes which was tested for feedbacks by iterations.</div>
+        <div id="w-node-05ce66aa0538-95a5a26c" class="text-block-19">User interviews and focus groups helps to gain more clarity on user behaviours</div>
+        <div id="w-node-05ce66aa053a-95a5a26c" class="text-h3-3 black">With the gathered data we started by ideating solutions in a systematic approach. With several possible solutions at hand we started by building low fidelity prototypes which was iterated and tested with know users and build them with our quality engineers to take it to the real world.</div>
       </div>
     </div>
   </div>
   <div class="wireframe">
-    <div class="container-csa w-container"><img src="images/csa 3.png" loading="lazy" srcset="images/csa 3-p-500.png 500w, images/csa 3-p-800.png 800w, images/csa 3-p-1080.png 1080w, images/csa 3.png 1260w" sizes="94vw" alt="" class="image-13"></div>
+    <div class="container-csa w-container"><img src="images/metamorp 3.jpg" loading="lazy" srcset="images/metamorp 3-p-500.jpg 500w, images/metamorp 3-p-800.jpg 800w, images/metamorp 3-p-1080.jpg 1080w, images/metamorp 3.jpg 1260w" sizes="94vw" alt="" class="image-13"></div>
   </div>
-  <div class="section-17">
-    <div class="container-13 w-container">
-      <div class="w-layout-grid grid-25">
-        <div id="w-node-05ce66aa0538-95a5a26c" class="text-block-19">Prototyping the ideas by building low fidelity wireframes</div>
-        <div id="w-node-05ce66aa053a-95a5a26c" class="text-h3-3 black">One of the initial that arose through the ideating sessions is to build a feature that helps people to plan their weekly menu and get the right amount of vegetables that's needed for the entire week to avoid last minute panic and confusions of what to cook.</div>
+  <div class="metamorp-design">
+    <div class="container-metamorp w-container">
+      <div class="div-block-metamorp">
+        <div class="text-h2-2 black">The visual language for the platform was based on the mood boards developed through the design process</div>
       </div>
     </div>
-  </div>
-  <div class="visual-design">
-    <div class="container-23 w-container"><img src="images/csa 4.png" loading="lazy" srcset="images/csa 4-p-500.png 500w, images/csa 4-p-800.png 800w, images/csa 4-p-1080.png 1080w, images/csa 4.png 1367w" sizes="100vw" alt="" class="image-12"></div>
+    <div class="container-23 w-container"><img src="images/metamorp 4.jpg" loading="lazy" srcset="images/metamorp 4-p-500.jpg 500w, images/metamorp 4-p-800.jpg 800w, images/metamorp 4-p-1080.jpg 1080w, images/metamorp 4.jpg 1367w" sizes="100vw" alt="" class="image-12"></div>
   </div>
   <div class="branding">
     <div class="container-csa2 w-container">
-      <div class="div-block-85">
-        <div class="text-h2-2 black">Build a design system that could be used through their multiple user portals</div>
-      </div>
-      <div class="container-csa w-container"><img src="images/csa 5.png" loading="lazy" srcset="images/csa 5-p-500.png 500w, images/csa 5-p-800.png 800w, images/csa 5-p-1080.png 1080w, images/csa 5.png 1260w" sizes="94vw" alt="" class="image-13"></div>
+      <div class="container-csa w-container"><img src="images/metamorp 5.png" loading="lazy" srcset="images/metamorp 5-p-500.png 500w, images/metamorp 5-p-800.png 800w, images/metamorp 5-p-1080.png 1080w, images/metamorp 5.png 1260w" sizes="94vw" alt="" class="image-13"></div>
     </div>
   </div>
   <div class="visual-design">
-    <div class="container-23 w-container"><img src="images/csa 6.png" loading="lazy" srcset="images/csa 6-p-500.png 500w, images/csa 6-p-800.png 800w, images/csa 6-p-1080.png 1080w, images/csa 6.png 1367w" sizes="100vw" alt="" class="image-12"></div>
+    <div class="container-23 w-container"><img src="images/metamorp 6.png" loading="lazy" srcset="images/metamorp 6-p-500.png 500w, images/metamorp 6-p-800.png 800w, images/metamorp 6-p-1080.png 1080w, images/metamorp 6.png 1367w" sizes="100vw" alt="" class="image-12"></div>
   </div>
   <div class="section-projects">
     <div class="wrapper1 project-1 w-container">
       <div class="case-study-heading-2">
         <div class="text-h2 black">Other Case Studies</div><a href="projects.html" class="text-button-link-2 see-all">see all projects</a></div>
-        <div class="w-layout-grid case-study-grid">
-          <div class="proj-1"><img src="images/Customer Advocacy.png" loading="lazy" alt="" class="project-image">
-            <div class="text-h2-5">A Customer Advocacy platform</div>
-            <a href="#" class="text-button-link-1 w-inline-block">
-              <div class="button-link-icon"></div>
-              <div>View Case Study</div>
-            </a>
-          </div>
-          <div class="proj-1 _2"><img src="images/Event hosting made stress less.png" loading="lazy" alt="" class="project-image">
-            <div class="text-h2-5">Event Hosting made stressless</div>
-            <a href="cs-event-managment.html" class="text-button-link-1 w-inline-block">
-              <div class="button-link-icon"></div>
-              <div>View Case Study</div>
-            </a>
-          </div>
+      <div class="w-layout-grid case-study-grid-2">
+        <div class="proj-1"><img src="images/Event hosting made stress less.png" loading="lazy" alt="" class="project-image">
+          <div class="text-h2-5">Event Hosting made stressless</div>
+          <a href="event-managment.html" class="text-button-link-1 w-inline-block">
+            <div class="button-link-icon"></div>
+            <div>View Case Study</div>
+          </a>
+        </div>
+        <div class="proj-1 _2"><img src="images/Childcare.png" loading="lazy" alt="" class="project-image">
+          <div class="text-h2-5">Child Care Portal</div>
+          <a href="child-care-portal.html" class="text-button-link-1 w-inline-block">
+            <div class="button-link-icon"></div>
+            <div>View Case Study</div>
+          </a>
+        </div>
       </div>
-      <div class="case-studies-view-all"><a href="#" class="text-button-link-2">View ALl Projects</a></div>
+      <div class="case-studies-view-all"><a href="projects.html" class="text-button-link-2">View ALl Projects</a></div>
     </div>
   </div>
   <div class="section-footer">
@@ -180,7 +177,7 @@
           </div>
         </div>
         <div class="footer-block-2">
-          <div class="w-layout-grid grid-10"><a href="services-user-experience.html" class="text-link-2-footer">User Experience</a><a href="services-interface-design.html" class="text-link-2-footer">Interface Design</a><a href="services-ui-development.html" class="text-link-2-footer">UI Development</a><a href="services-endtoend-development.html" class="text-link-2-footer">End To End Development</a><a href="services-usabilitytesting.html" class="text-link-2-footer">Usability Testing</a></div>
+          <div class="w-layout-grid grid-10"><a href="ux-consulting.html" class="text-link-2-footer">User Experience</a><a href="visual-design.html" class="text-link-2-footer">Interface Design</a><a href="front-end-development.html" class="text-link-2-footer">UI Development</a><a href="back-end-development.html" class="text-link-2-footer">End To End Development</a><a href="usability-testing.html" class="text-link-2-footer">Usability Testing</a></div>
         </div>
       </div>
       <div class="w-layout-grid terms-grid"><a class="text-link-3-footer">All rights reserved @ 2020</a><a class="text-link-3-footer">Made with love 
